--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.6",
     "konva": "^8.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.5",
     "react-icons": "^4.3.1",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.49.4",
     "web-vitals": "^2.1.4"
   },
