--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-drag-listview": "^0.1.9",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.3.1",
     "react-konva": "^17.0.2-5",
